<resources>
    <string name="title_activity_component_test">ComponentTestActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="please_confirm_your_email_address">Please, confirm your email address</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_delete">Delete</string>
    <string name="create_your_password">Create your password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_your_password_underlined"><u>Forgot your password?</u></string>
    <string name="instructions_to_reset_password">We sent you instructions to reset your password!</string>
    <string name="security_reasons_of_password">For security reasons, we do NOT store your password, and we never send your password via any channel.</string>
    <string name="please_contact_us">If you continue to have problems, please contact us.</string>
    <string name="contact_us">contact us.</string>
    <string name="send_reset_instructions">Send reset instructions</string>
    <string name="back_underlined"><u>Back</u></string>
    <string name="start_now">Start now</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="to_get_start">To get started, you should create a new password</string>
    <string name="hello">hello,</string>
    <string name="great_you_re_almost_ready">great,\nyou’re almost ready</string>
    <string name="enter_your_cellphone_number">Enter your cellphone number</string>
    <string name="disclaimer_phone_usage">We will only use this number for account setup and security purposes, such as two-factor authentication.</string>
    <string name="we_sent_a_code">we just sent a code to your phone</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="edit_cellphone_number"><u>Edit cellphone number</u></string>
    <string name="code_hasnt_arrived">Code hasn\'t arrived?</string>
    <string name="you_can_resend_in">You can resend in</string>
    <string name="you_can_resend_it">You can resend it</string>
    <string name="invalid_code">Invalid code!</string>
    <string name="hint_area_code">+1</string>
    <string name="hint_phone_number">000 000 0000</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="two_strings_template">%1$s %2$s</string>
    <plurals name="plural_year">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="plural_month">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <string name="maps_api_key" translatable="false">AIzaSyAatiOtTpVsIw-LA5Iz0MIhFvo_Bc-kLEI</string>
    <string name="sign_in">Sign in</string>
    <string name="get_a_quote">Get a quote</string>
    <string name="add_a_pet">Add a pet</string>
    <string name="get_a_quote_message">Don\'t have an account yet?</string>
    <string name="first_content_0">call us Kanguro…</string>
    <string name="first_content_1">modernizing your experience with insurance</string>
    <string name="second_content">our main focus is bringing value to your life with coverages designed for your every day</string>
    <string name="third_content_0">easy to understand,\neasy to quote and\neasy to claim</string>
    <string name="third_content_1">just a few clicks and\nyou are done!</string>
    <string name="switch_language"><u>Cambiar a Español</u></string>
    <string name="update_cellphone_message">Update your cellphone!</string>
    <string name="onboarding_1">modernizing the insurance experience.</string>
    <string name="bot_greetings">hello, I\'m Javier!</string>
    <string name="bot_description">Your A.I. personal assistant</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="submit_now">Submit now</string>
    <string name="do_it_later">Do it later</string>
    <string name="see_map">See map</string>
    <string name="closer_vets">Here are the vets closer to your location</string>
    <string name="details">Details</string>
    <string name="are_you_liking_kanguro">Are you liking\nKanguro?</string>
    <string name="get_amazon_gift_card">Get a $25 Amazon Gift Card</string>
    <string name="refer_a_friend_and_earn_rewards">Refer a friend.</string>
    <string name="see_all">See all</string>
    <string name="done">Done</string>
    <string name="add_more">Add more</string>
    <string name="edit">Edit</string>
    <string name="home_menu">Home</string>
    <string name="coverage_menu">Coverages</string>
    <string name="cloud_menu">Cloud</string>
    <string name="more_menu">More</string>
    <string name="pet_menu">Pet</string>
    <string name="renters_menu">Renters</string>
    <string name="chat_menu">Support</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="canceled">Canceled</string>
    <string name="finished">Finished</string>
    <string name="policy_number">Policy Number #%s</string>
    <string name="policy_period">Policy Period: %s - %s</string>
    <string name="finish_date">Finish Date: %s</string>
    <string name="purchase_date">Purchase Date: %s</string>
    <string name="renew_date">Renews on: %s</string>
    <string name="remaining_limit">remaining</string>
    <string name="up_to">Up to %s</string>
    <string name="claims_label">Claims</string>
    <string name="track_claim">Track your claims</string>
    <string name="open_button">Open</string>
    <string name="closed_button">Closed</string>
    <string name="drafts_button">Drafts</string>
    <string name="continue_claim">Please continue your claim!</string>
    <string name="claims_empty_list">There is nothing here yet!</string>
    <string name="open_claim_date_info">Last update on</string>
    <string name="closed_claim_date_info">Closed on</string>
    <string name="draft_claim_date_info">Created on</string>
    <string name="closed_claim_paid">Paid</string>
    <string name="details_summary">Summary</string>
    <string name="details_description">Claim Description</string>
    <string name="details_attachments">Attachments</string>
    <string name="details_status">Status</string>
    <string name="details_pet">Pet</string>
    <string name="details_claim">Claim</string>
    <string name="details_date">Date</string>
    <string name="date_submitted">Date submitted</string>
    <string name="date_incident">Incident date</string>
    <string name="details_amount">Amount</string>
    <string name="details_amount_paid">Paid amount</string>
    <string name="details_amount_transferred">Transferred amount</string>
    <string name="details_contribution_towards_deductible">Contribution towards deductible</string>
    <string name="details_amount_claimed">Claimed amount</string>
    <string name="details_payment">Payment method</string>
    <string name="pet_coverage">%s\'s coverage</string>
    <string name="wellness_preventive">WELLNESS AND PREVENTIVE</string>
    <string name="claim_status_submitted">Submitted</string>
    <string name="claim_status_assigned">Assigned</string>
    <string name="claim_status_approved">Approved</string>
    <string name="claim_status_in_review">In Review</string>
    <string name="claim_status_draft">Draft</string>
    <string name="claim_status_closed">Closed</string>
    <string name="claim_status_deleted">Deleted</string>
    <string name="claim_status_success">Success</string>
    <string name="claim_status_denied">Denied</string>
    <string name="claim_status_approved_paid">Paid</string>
    <string name="claim_number">Claim %s</string>
    <string name="med_history">Medical History</string>
    <string name="reminders_section">Reminders</string>
    <string name="file_a_claim">File a claim</string>
    <string name="vet_advice">Vet advice</string>
    <string name="new_pet_parents">New Pet Parents</string>
    <string name="frequent_questions">Frequent questions</string>
    <string name="frequent_asked_questions">Frequently asked questions</string>
    <string name="payment_settings">Payment settings</string>
    <string name="coverage_details_transition_name">coverage_detail_transition</string>
    <string name="new_claim">New Claim</string>
    <string name="take_pic">Take a picture(s)</string>
    <string name="select_pic">Select picture(s)</string>
    <string name="select_file">Select file(s)</string>
    <string name="hello_pet">Hello,</string>
    <string name="warning_end_date">Waiting period end date</string>
    <string name="remaining_value">You have\n$2,500 remaining</string>
    <string name="left_to_deductible"><b>$50</b> left to reach\nthe deductible</string>
    <string name="plan_summary">Plan summary</string>
    <string name="what_is_covered">What is covered</string>
    <string name="track_your_benefits">Track your benefits</string>
    <string name="policy_docs">Policy docs</string>
    <string name="remember_reimbursement">%d%% reimbursement</string>
    <string name="billing_prefs">Billing preferences</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="language">Language</string>
    <string name="language_preferences">Language preferences</string>
    <string name="language_preferences_subtitle">Please tell us in what language you speak to your furry friend in!</string>
    <string name="english">English</string>
    <string name="espanol">Español</string>
    <string name="procedures">Procedures</string>
    <string name="item_prosthetic_limbs">Prosthetic Limbs, Devices &amp; Mobility Aids</string>
    <string name="item_cremation">Cremation</string>
    <string name="item_euthanasia">End of life - Euthanasia up to $1,000</string>
    <string name="item_vet_exam">Vet exam fees</string>
    <string name="item_surgery">Surgery &amp; Hospitalization</string>
    <string name="item_er_vets">Specialty and ER vets</string>
    <string name="item_cancer_treatment">Cancer treatment</string>
    <string name="item_dental_illness">Dental illness up to $1,000/year</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="item_blood_test">Blood test</string>
    <string name="item_urinalysis">Urinalysis</string>
    <string name="item_krays">KRAYS</string>
    <string name="item_mri_s">MRI\'s</string>
    <string name="item_labwork">Labwork</string>
    <string name="item_ct_scans">CT Scans</string>
    <string name="item_ultrasounds">Ultrasounds</string>
    <string name="item_behavioral_exam">Behavioral exam</string>
    <string name="medications">Medications</string>
    <string name="item_chronic_conditions">Chronic conditions that may develop</string>
    <string name="item_hereditary_conditions">Hereditary breed-specific conditions that may develop</string>
    <string name="item_prescription_medication">Prescription medication caused by other accidents or illness</string>
    <string name="item_blood_disorders">Blood disorders</string>
    <string name="item_eye_disorders">Eye Disorders</string>
    <string name="item_musculoskeletal_disorder">Musculoskeletal disorder</string>
    <string name="item_respiratory_conditions">Respiratory conditions</string>
</resources>