<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/KanguroTextStyle.Title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xs"
            android:layout_marginTop="@dimen/spacing_lg"
            android:layout_marginEnd="@dimen/spacing_xs"
            android:text="@string/language"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_xs"
            android:paddingStart="@dimen/spacing_xs"
            android:paddingEnd="@dimen/spacing_xs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_settings_section"
                android:orientation="vertical"
                android:padding="@dimen/spacing_xxxs">

                <TextView
                    style="@style/KanguroTextStyle.Subhead.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language_preferences" />

                <TextView
                    style="@style/KanguroTextStyle.Caption.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xxxs"
                    android:text="@string/language_preferences_subtitle"
                    android:textColor="@color/secondary_medium" />

                <RadioGroup
                    android:id="@+id/languageSelector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xxxs"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/englishOption"
                        style="@style/KanguroRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/english" />

                    <RadioButton
                        android:id="@+id/spanishOption"
                        style="@style/KanguroRadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/espanol" />

                </RadioGroup>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ImageButton
            android:id="@+id/closeButton"
            style="@style/KanguroCloseButtonX"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


